Enchancements to align this repo with chaincode scaffolding repos.
