# server/controllers/ping.ts
@@ -15,6 +15,7 @@
  */
 
 import * as config from 'config';
+import { Contract } from 'fabric-network';
 import { getLogger } from 'log4js';
 
 import * as util from '../helpers/util';
@@ -22,23 +23,22 @@ import * as util from '../helpers/util';
 const logger = getLogger('controllers - ping');
 logger.level = config.get('logLevel');
 
-const pingCC = async (req, res) => {
-  logger.debug('entering >>> pingCC()');
+const ping = async (req, res) => {
+  logger.debug('entering >>> ping()');
 
   let jsonRes;
   try {
     // More info on the following calls: https://fabric-sdk-node.github.io/Contract.html
 
-    // get contract instance retrieved in fabric-routes middleware
-    const contract = res.locals.defaultchannel.pingcc;
+    // Get contract instance retrieved in fabric-routes middleware
+    const contract: Contract = res.locals.defaultchannel.mycontract;
 
-    // invoke transaction
+    // Invoke transaction
     // Create transaction proposal for endorsement and sendTransaction to orderer
-    const invokeResponse = await contract.submitTransaction('Health');
+    const invokeResponse = await contract.submitTransaction('ping');
 
-    // query
-    // simply query the ledger
-    // const queryResponse = await contract.evaluateTransaction('Health');
+    // Query - simply query the ledger
+    // const queryResponse = await contract.evaluateTransaction('ping');
 
     jsonRes = {
       result: invokeResponse.toString(),
@@ -53,8 +53,8 @@ const pingCC = async (req, res) => {
     };
   }
 
-  logger.debug('exiting <<< pingCC()');
+  logger.debug('exiting <<< ping()');
   util.sendResponse(res, jsonRes);
 };
 
-export { pingCC as default };
+export { ping as default };
